--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="login.css">
-  <title>Your Crop Market</title>
+  <title>Agro Mart</title>
 </head>
 <body>
   <!-- Your existing HTML code -->
@@ -23,7 +23,9 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required>
           </div>
-          <button type="submit">Login</button>
+          <a href="HomePage.html"
+          <button> Login </button>
+        </a>
         </form>
       </div>
       <div id="register-form" class="form-content">
@@ -31,7 +33,5 @@
       </div>
     </div>
   </div>
-
-  <script src="login.js"></script>
 </body>
 </html>
