--- a/register.html
+++ b/register.html
@@ -4,16 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="register.css">
-  <title>Your Crop Market</title>
+  <title>Agro Mart</title>
 </head>
 <body>
-  <!-- Your existing HTML code -->
-
-  <div class="overlay" id="overlay">
-    <div class="form-container" id="form-container">
-      <span class="close-btn" onclick="closeForm()">×</span>
-      <div id="login-form" class="form-content">
-        <!-- Your existing login form -->
       </div>
       <div id="register-form" class="form-content">
         <h2>Register</h2>
@@ -37,13 +30,13 @@
             <input type="radio" id="seller" name="role" value="seller" required>
             <label for="seller">Seller/Farmer</label>
           </div>
-          <button type="submit">Register</button>
+          <a href="login.html"
+          <button>Register</button>
+        </a>
         </form>
       </div>
     </div>
   </div>
-
-  <script src="register.js"></script>
 </body>
 </html>
 
